Backport 1.16.5
make compatible with java 8


modmenu no longer hosted on fabric maven.


backport IContainerParent


forgot a spot with revert j17


fix getNBT


fix


Revert "fix entity setGlowing in 1.17"

This reverts commit 0e6e15a14488f08f8b14b62a96677dd9a98e47a9.

fix backport


fixes and forge 1.16


screen


jij stopped working. (wtf)


java 8


fix mixinentity missing from config


Patch the old Architectury PlatformMethods


fix load order


fix


fix


fix 1.16.5


fix


fix actionbar


fix requiring newer java


fix mappings


fixed building of 1.16.5 forge


fix


fix compile


cleanup